infrastructure/cert-manager/cert-manager-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-ingress-egress
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openbao
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
